Fixed schedule on mobile display

--- a/assets/styles/pages/schedule-page.less
+++ b/assets/styles/pages/schedule-page.less
@@ -14,4 +14,11 @@
     white-space: nowrap;
   }
 
+  .schedule-rows .layout.horizontal {
+    @media (max-width: 767px) {
+      flex-direction: column;
+    }
+
+  }
+
 }
